# liquidation-bot

./: .env  .env.example  .gitignore  Cargo.toml  INSTALL.bat  LANCER_BOT.bat  README.md  SETUP_AND_RUN.ps1  START_BOT.bat  START_PRODUCTION.bat  package.json
frontend-dashboard/: README.md  index.html  netlify.toml  package.json  tailwind.config.js
frontend-dashboard/src/: App.tsx  index.css  types.ts  vite-env.d.ts
frontend-dashboard/src/components/: ConnectionStatus.tsx  Header.tsx  OpportunitiesTable.tsx  ProfitChart.tsx  StatsGrid.tsx  TransactionsLog.tsx
src/: arbitrage-bot.ts  arbitrage.rs  config.rs  dynamic-sizer.ts  executor.ts  jupiter.rs  kamino-flash-loan.ts  liquidator.rs  main.rs  profit-calculator.ts  scanner.rs  scanner.ts  utils.rs
src/dex-integrations/: index.ts  meteora.ts  orca.ts  phoenix.ts  raydium.ts
src/utils/: throttled-connection.ts
ts-bot/: .env.example  README-MEV-SCALING.md  README.md  UPGRADE-OPTIONS.md  package-lock.json  package.json
ts-bot/src/: amm-swap.ts  api-server.ts  arbitrage-engine.ts  cross-dex-executor.ts  cross-dex-monitor.ts  debug-kamino.ts  dynamic-sizer.ts  flash-arb.ts  index.ts  liquidation-bot-pro.ts  liquidation-bot.ts  main-liquidation.ts  main.ts  memecoin-arb.ts  new-token-discovery.ts  profit-calculator.ts
ts-bot/src/utils/: logger.ts
