[package]
name = "solana-liquidation-bot"
version = "1.0.0"
edition = "2021"
authors = ["Ares Trading Bot"]
description = "Solana liquidation bot for Kamino, Marginfi - Production Ready"

[[bin]]
name = "liquidation-bot"
path = "src/main.rs"

[dependencies]
# Core Solana dependencies
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"

# Jupiter via HTTP API (plus simple, pas besoin de SDK)

# Async runtime
tokio = { version = "1.35", features = ["full", "sync", "time", "signal"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Math and utilities
rust_decimal = { version = "1.33", features = ["maths"] }

# Utilities
bs58 = "0.5"
base64 = "0.21"
chrono = "0.4"
bincode = "1.3"
borsh = "1.3"

# Kamino Lend integration
kamino-lend = { version = "0.4.1", features = ["no-entrypoint"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
